[gd_scene load_steps=10 format=3 uid="uid://cg2q1ueuep33x"]

[ext_resource type="Script" path="res://Prefabs/UI/RespawnCard.gd" id="1_d8qdo"]
[ext_resource type="FontFile" uid="uid://7btu78ff8nvs" path="res://Fonts/monkey.ttf" id="1_yfq47"]
[ext_resource type="Texture2D" uid="uid://cgkdg5pda3am7" path="res://Sprites/boardgame_icons/Default (64px)/hourglass_top.png" id="2_vo1ty"]
[ext_resource type="Texture2D" uid="uid://bp2gvtbk0chhh" path="res://Sprites/boardgame_icons/Default (64px)/hourglass.png" id="3_mec6t"]
[ext_resource type="Texture2D" uid="uid://b3q3kckisrrh3" path="res://Sprites/boardgame_icons/Default (64px)/hourglass_bottom.png" id="4_jhdlr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dr1ee"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vo1ty")
}, {
"duration": 1.0,
"texture": ExtResource("3_mec6t")
}, {
"duration": 1.0,
"texture": ExtResource("4_jhdlr")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fcsgf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_ge7al"]
resource_name = "flip"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7dw8"]
_data = {
"RESET": SubResource("Animation_fcsgf"),
"flip": SubResource("Animation_ge7al")
}

[node name="RespawnCard" type="CanvasLayer" groups=["RespawnCard"]]
script = ExtResource("1_d8qdo")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1284.0
offset_bottom = 729.0
color = Color(0, 0, 0, 0.101961)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 160.0
offset_right = 49.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_yfq47")
theme_override_font_sizes/font_size = 48
text = "RESPAWN IN"

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 278.0
offset_right = 49.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_yfq47")
theme_override_font_sizes/font_size = 48
text = "5"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(638, 589)
sprite_frames = SubResource("SpriteFrames_dr1ee")
autoplay = "default"
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n7dw8")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimationPlayer" method="play" binds= ["flip"]]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
